<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.doapps.habits.activity.MainActivity">

  <android.support.v7.widget.RecyclerView
    android:id="@+id/habits_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

  <TextView
    android:id="@+id/empty_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:text="@string/no_habits_available"
    android:textSize="16sp"
    android:visibility="gone"/>

  <android.support.design.widget.FloatingActionButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_gravity="bottom|end"
    android:onClick="toCreateFragment"
    android:src="@drawable/ic_plus"/>
</FrameLayout>
