...
  </FrameLayout>


  <!--fix position-->
  <!-- Connect with facebook button -->
  <Button
    android:id="@+id/btn_connect_facebook"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:paddingTop="14dp"
    android:paddingBottom="14dp"
    android:paddingLeft="16dp"
...
